[workspace]
resolver = "2"
members = [
  "tokio",
  "tokio-macros",
  "tokio-test",
  "tokio-stream",
  "tokio-util",

  # Internal
  "benches",
  "examples",
  "stress-test",
  "tests-build",
  "tests-integration",

  "apps/hello_world",
  "apps/chat",
  "apps/connect",
  "apps/connect-udp",
  "apps/custom-executor-tokio-context",
  "apps/echo",
  "apps/echo-udp",
  "apps/print_each_packet",
  "apps/proxy",
  "apps/tinydb",
  "apps/tinyhttp",
  "apps/udp-client",
  "apps/udp-codec",
]
