[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { path = "../../tokio", features = ["macros", "rt-multi-thread", "io-util", "net"] }

# It's NOT just a comment. But for selection of features
#axstd = { path = "../../../ulib/axstd", features = ["net", "multitask", "math"], optional = true }
