[package]
name = "tinydb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { path = "../../tokio", features = ["macros", "rt-multi-thread", "io-util", "net"] }
tokio-stream = { path = "../../tokio-stream", version = "0.1" }
tokio-util = { path = "../../tokio-util", features = ["full"], version = "0.7.0" }
futures = { version = "0.3.0", features = ["thread-pool"]}

# It's NOT just a comment. Makefile will get features from it.
#axstd = { path = "../../../ulib/axstd", features = ["net", "multitask", "math"], optional = true }
