[package]
name = "mini_redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { path = "../../../tokio", features = ["macros", "rt-multi-thread", "io-util", "net"] }
bytes = "1.4.0"
tracing = { version = "0.1.37", features = ["max_level_trace"] }
atoi = "2.0.0"

# It's NOT just a comment. Makefile will get features from it.
#axstd = { path = "../../../ulib/axstd", features = ["net", "multitask", "math"], optional = true }
